tests/errors/missing_required_keyword_mix.py
# expect_error: missing 1 required positional argument
def add(a, b, c):
    return a + b + c

print(add(a=1, c=3))